# Konative

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
.github/scripts/: verify-emulator-run.sh
.github/workflows/: android-build.yml  desktop-tests.yml
cmake/: CPM.cmake  README.md
cmake/modules/: KonativeAndroidToolchain.cmake  KonativeCompileKotlinDex.cmake  KonativeDependencies.cmake  KonativeEmbedBlob.cmake  KonativeEmbedKotlinDex.cmake  KonativeGenerateIncbinAsm.cmake  KonativeKotlinNative.cmake  KonativeWarnings.cmake
embedded_kotlin/: README.md  r8-rules.pro
embedded_kotlin/r_shim/: README.md
embedded_kotlin/r_shim/androidx/compose/ui/: R.kt
embedded_kotlin/r_shim/androidx/compose/ui/graphics/: R.kt
embedded_kotlin/r_shim/androidx/core/: R.kt
embedded_kotlin/r_shim/androidx/core/viewtree/: R.kt
embedded_kotlin/r_shim/androidx/customview/poolingcontainer/: R.kt
embedded_kotlin/r_shim/androidx/lifecycle/runtime/: R.kt
embedded_kotlin/r_shim/androidx/lifecycle/viewmodel/: R.kt
embedded_kotlin/r_shim/androidx/savedstate/: R.kt
examples/: CMakeLists.txt  README.md
examples/minimal_triangle/: CMakeLists.txt  main.cpp
include/konative/: CMakeLists.txt
include/konative/app/: CMakeLists.txt  README.md  app_config.hpp  application.hpp  entry_point.hpp
include/konative/app/config/: json_config_file.hpp
include/konative/app/detail/: lifecycle_bridge.hpp
include/konative/core/: CMakeLists.txt  README.md  assert.hpp  log.hpp  non_copyable.hpp  result.hpp  type_traits.hpp
include/konative/core/detail/: platform.hpp
include/konative/ecs/: CMakeLists.txt  README.md  glm_storage_self_check.hpp  registry.hpp  registry_snapshot_self_check.hpp  snapshot_file.hpp  system.hpp  world.hpp
include/konative/ecs/detail/: system_traits.hpp
include/konative/embed/: CMakeLists.txt  README.md  checked_blob.hpp
include/konative/events/: CMakeLists.txt  README.md  dispatcher.hpp  next_event_awaiter.hpp  next_event_awaiter_self_check.hpp
include/konative/events/input/: KeyEvent.hpp  TouchDownEvent.hpp  TouchMoveEvent.hpp  TouchUpEvent.hpp
include/konative/events/lifecycle/: AppDestroyedEvent.hpp  AppPausedEvent.hpp  AppResumedEvent.hpp  AppStartedEvent.hpp
include/konative/events/persistence/: SnapshotSavedEvent.hpp
include/konative/events/window/: WindowCreatedEvent.hpp  WindowDestroyedEvent.hpp  WindowFocusChangedEvent.hpp  WindowResizedEvent.hpp
include/konative/interop/: CMakeLists.txt  README.md  c_abi_export.hpp  kotlin_native_bridge.hpp
include/konative/interop/detail/: symbol_visibility.hpp
include/konative/jni/: CMakeLists.txt  README.md  call.hpp  dex_loader.hpp  files_dir.hpp  ref.hpp
include/konative/platform/android/: CMakeLists.txt  README.md  activity_bridge.hpp  looper_pump.hpp  native_app_glue.hpp
include/konative/platform/android/detail/: app_cmd_translation.hpp
include/konative/reflect/: CMakeLists.txt  README.md  component_traits.hpp  meta_glaze_json.hpp  meta_glaze_json_self_check.hpp  meta_registry.hpp  pfr_auto_registration.hpp  pfr_auto_registration_self_check.hpp
include/konative/reflect/detail/: registration_thunk.hpp
include/konative/render/: CMakeLists.txt  README.md  renderer.hpp
include/konative/scheduling/: CMakeLists.txt  README.md  cross_thread_event_queue.hpp  spsc_event_queue.hpp  spsc_event_queue_self_check.hpp  task_graph.hpp  taskflow_self_check.hpp  thread_pool.hpp  thread_pool_self_check.hpp
include/konative/scheduling/detail/: view_split.hpp
include/konative/spatial/: CMakeLists.txt  README.md  approach.hpp  transform.hpp  transform_self_check.hpp  transform_serialize.hpp
native/: CMakeLists.txt  README.md
native/cinterop/: README.md
native/src/: Renderer.kt
research/: incbin_embedding_research.md  jni_activity_bootstrap_research.md  research.md
src/: CMakeLists.txt  README.md
src/platform/android/: CMakeLists.txt  activity_bridge.cpp  android_main.cpp  jni_onload.cpp  looper_pump.cpp
testapp/: README.md  build.gradle.kts  settings.gradle.kts
testapp/app/: build.gradle.kts
testapp/app/src/main/: AndroidManifest.xml
testapp/app/src/main/java/com/konative/testapp/: MainActivity.kt
tests/: CMakeLists.txt  README.md  main.cpp  test_app.cpp  test_app_config.cpp  test_checked_blob.cpp  test_cross_thread_event_queue.cpp  test_events.cpp  test_glm_storage.cpp  test_json_config_file.cpp  test_log.cpp  test_meta_glaze_json.cpp  test_next_event_awaiter.cpp  test_pfr_auto_registration.cpp  test_reflect.cpp  test_registry_snapshot.cpp  test_result.cpp  test_snapshot_file.cpp  test_spsc_event_queue.cpp  test_taskflow_self_check.cpp  test_thread_pool_self_check.cpp  test_transform.cpp  test_world.cpp
tools/kotlin-classpath-resolver/: README.md  build.gradle.kts  settings.gradle.kts
